[package]
name = "threadder"
version = "0.1.0"
edition = "2018"
authors = ["T-O-R-U-S"]
description = "A multi-threading implementation that does not rely on Futures."
repository = "https://github.com/T-O-R-U-S/threadder"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
